ROC-2559: fixed too large margin for error msgs

--- a/src/main/public/stylesheets/components/_timeline.scss
+++ b/src/main/public/stylesheets/components/_timeline.scss
@@ -36,6 +36,10 @@
       margin-top: 15px;
     }
 
+    .error-message {
+      margin-top: 0;
+    }
+
     :last-child {
       margin-bottom: 15px;
     }
